--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/collapsible-menu-item/collapsible-menu-item.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/collapsible-menu-item/collapsible-menu-item.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="matchesSearchTerm">
-  <fab-tooltip-host [content]="menuItem.label" [directionalHint]="directionalHint">
+  <fab-tooltip-host [content]="menuItem.label | translate" [directionalHint]="directionalHint">
     <div [id]="menuItem.label" class="menu-item" (click)="handleClick()" [class.selected]="isSelected()" style="padding-top:6px!important"
         [style.padding-left]="getPadding()" [style.font-size]="getFontSize()">
         <div tabindex="0" role="button" (keyup.enter)="handleClick()" [attr.aria-label]="menuItem.label" type="button">
