truncate search result  (#1165)
* truncate for search result

* Update aria-label

* Wrap word

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
@@ -50,11 +50,11 @@
           <ng-template let-feature="item" let-index="index">
             <div class="result-item remove-results-padding" tabindex="0" (mousedown)="navigateToFeature(feature)"
               [attr.aria-label]="getResultAriaLabel(index)">
-              <div>
-                <img style="height: 20px;width: 20px;margin-right: 5px;" [src]="getIconImagePath(feature.id)" alt="">
+              <div class="item-word-wrap" style="width: 65%;">
+                <img style="height: 20px;width: 20px;margin-right: 5px;" [src]="getIconImagePath(feature.id)" [attr.alt]="feature.name">
                 <span class="feature-title">{{feature.name}}</span>
               </div>
-              <div>
+              <div class="item-word-wrap" style="width: 30%;">
                 <span class="feature-category">{{feature.category}}</span>
               </div>
             </div>
