Require explicit consent from customers to share/not share diagnostic information before they can start a chat. Also, make the chat bubble and all elements on them keyboard accessible.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -6,11 +6,13 @@
           <img src="assets/img/jen.jpg" class="agentImage">
           <span class="agentName"> Jen </span>
         </div>
-        <div class="cxpChat-ChangeIcon" role="button" aria-label="Close chat dialogue" title="Close"
-          (click)="hideChatConfDialog(true, 'CloseIcon')">
-          <i class="fa fa-times cxpChat-CloseIcon"></i>
-          <i class="fa fa-window-close fa-lg cxpChat-CloseIcon"></i>
-        </div>
+        <button class="cxpChat-RemoveOutline cxpChat-FlatButton" role="button" title="Close"
+          aria-label="Close chat dialogue" (click)="hideChatConfDialog(true, 'CloseIcon')">
+          <div class="cxpChat-ChangeIcon">
+            <i class="fa fa-times cxpChat-CloseIcon"></i>
+            <i class="fa fa-window-close fa-lg cxpChat-CloseIcon"></i>
+          </div>
+        </button>
       </div>
       <hr>
       <div>
@@ -19,32 +21,54 @@
       <div *ngIf="showDiagnosticsConsentOption" class="cxpChat-ConsentContainer">
         <div class="cxpChat-ConsentOptionContainer">
           <div>
-            <input id="chkBoxDiagnosticConsent" type="checkbox" [(ngModel)]="diagnosticLogsConsent">
+            <span>Share diagnostic information?</span>
           </div>
           <div class="cxpChat-ConsentText">
-            <label for="chkBoxDiagnosticConsent">Share diagnostic information.</label>
+            <sup class="cxpChat-Required"> * </sup>
+            <a target="_blank" role="link" aria-label="Click to learn more about the information we collect"
+              title="Click to learn more about the information we collect."
+              href="https://azure.microsoft.com/en-us/support/legal/support-diagnostic-information-collection/">
+              <i class="fa fa-info-circle"></i>
+            </a>
           </div>
         </div>
         <div>
-          <a target="_blank" role="link" aria-label="Click to learn more about the information we collect"
-            title="Click to learn more about the information we collect."
-            href="https://azure.microsoft.com/en-us/support/legal/support-diagnostic-information-collection/">
-            <i class="fa fa-info-circle"></i>
-          </a>
+          <div role="radiogroup"
+            aria-roledescription="Consent options to allow Microsoft access to diagnostic information."
+            aria-required="true">
+            <input id="diagConsentYes" aria-label="Yes, share diagnostic information with Microsoft." type="radio"
+              name="diagConsentOptions" value="Yes" [(ngModel)]="diagnosticLogsConsent">
+            <span class="cxpChat-ConsentText">
+              <label for="diagConsentYes">Yes</label>
+            </span>
+          </div>
+          <div>
+            <input id="diagConsentNo" aria-label="No, do not share diagnostic information with Microsoft." type="radio"
+              name="diagConsentOptions" value="No" [(ngModel)]="diagnosticLogsConsent">
+            <span class="cxpChat-ConsentText">
+              <label for="diagConsentNo">No</label>
+            </span>
+          </div>
+        </div>
+        <div aria-hidden="true">
+          <!--Placeholder-->
         </div>
       </div>
     </div>
     <div *ngIf="showChatButtons" class="cxpChat-actionBtnContainer">
       <input class="custom-button inactive-button white-border" (click)="hideChatConfDialog(true, 'CancelButton')"
         type="button" role="button" aria-label="Maybe later" value="Maybe later" />
-      <input class="custom-button default-button white-border" (click)="openChatPopup()" type="button" role="button"
-        aria-label="Confirm and Start" value="Confirm & Start!" />
+      <input class="custom-button default-button white-border" [disabled]="diagnosticLogsConsent==''"
+        [title]="diagnosticLogsConsent==''?'Select an option to share diagnostic information before you start the chat.':'Confirm and start chat.'"
+        (click)="openChatPopup()" type="button" role="button" aria-label="Confirm and Start" value="Confirm & Start!" />
     </div>
   </div>
 
   <div *ngIf="showChatConfDialog" class="arrow-bottom"></div>
 
-  <div class='chatBubble' *ngIf="showChatBubble" (click)="toggleChatConfDialog()">
-    <i class="fa fa-comments chatIcon" aria-hidden="true"></i>
-  </div>
+  <button role="button" class='chatBubble cxpChat-FlatButton' *ngIf="showChatBubble" (click)="toggleChatConfDialog()">
+    <div class='chatBubble'>
+      <i class="fa fa-comments chatIcon" aria-hidden="true"></i>
+    </div>
+  </button>
 </div>
