--- a/AngularApp/projects/diagnostic-data/src/lib/components/step-views/dropdown-step-view/dropdown-step.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/step-views/dropdown-step-view/dropdown-step.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../../app-service-diagnostics/src/styles/icons.scss';
+
 .bordered{
     border: 1px solid #e5e5e5;
     padding: 10px 10px 15px 10px;
