--- a/AngularApp/projects/diagnostic-data/src/lib/components/step-views/input-step-view/input-step.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/step-views/input-step-view/input-step.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../../app-service-diagnostics/src/styles/icons.scss';
+
 .input-step{
     padding: 10px 10px 10px 10px;
     fab-primary-button{
