update table and table filter styles (#1185)
* Update styles

* Update placeholder text and

* Replace text field with search box

* Fix placeholder type

--- a/AngularApp/projects/diagnostic-data/src/lib/components/data-table-v4/data-table-v4.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/data-table-v4/data-table-v4.component.html
@@ -1,18 +1,17 @@
 <data-container [title]="renderingProperties.title">
-  <div style="display: flex;">
+  <div style="display: flex;align-items: baseline;">
     <div *ngIf="allowColumnSearch" class="text-field">
-      <fab-text-field (onChange)=updateTableBySearch($event) [rows]="1" [placeholder]="searchAriaLabel"
-        [ariaLabel]="searchAriaLabel"></fab-text-field>
+        <fab-search-box #fabSearchBox [value]="searchValue" (onChange)="updateSearchValue($event)" (onFocus)="focusSearchBox()" [placeholder]="searchAriaLabel"></fab-search-box>
     </div>
     <!-- Filters -->
     <div *ngIf="tableFilters.length > 0" style="display: flex;">
-      <div *ngFor="let filter of tableFilters;let i = index">
+      <div *ngFor="let filter of tableFilters;let i = index" style="margin-left: 16px;">
         <fab-data-table-filter [tableFilter]=filter [options]="getOptionsWithColName(filter.columnName)" (onFilterUpdate)="updateFilter(filter.columnName,$event)" [index]="i" [tableId]="tableId"></fab-data-table-filter>
       </div>
     </div>
   </div>
   
-  <div *ngIf="renderingProperties.description" style="margin-bottom: 18px;">
+  <div *ngIf="renderingProperties.description" style="margin:16px 0px;">
     <markdown-text [markdownData]="renderingProperties.description"></markdown-text>
   </div>
   
