--- a/AngularApp/projects/diagnostic-data/src/lib/components/fab-data-table-filter/fab-data-table-filter.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/fab-data-table-filter/fab-data-table-filter.component.scss
@@ -1,10 +1,14 @@
 .filter-callout-container {
-    max-height: 300px; 
+    width: 300px;
     overflow-y: auto; 
     padding: 15px 25px;
 }
 
-.filter-callout-footer {
-    margin: 12px auto 12px 25px;
-    border-top-style: 1px solid rgba(204, 204, 204, 0.8);
+.callout-padding {
+    padding: 12px 16px 4px 16px;
 }
+
+.filter-callout-footer {
+    border-top: 1px solid rgba(204, 204, 204, 0.8);
+}
+
