--- a/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.html
+++ b/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.html
@@ -15,7 +15,7 @@
             <h3 class="box-title">Incident <a href="{{'https://portal.microsofticm.com/imp/v3/incidents/details/' + incidentInfo.incidentId + '/home'}}" target="_blank">{{incidentInfo.incidentId}}</a> &nbsp; {{incidentInfo.title}}</h3>
           </div>
   
-          <div style="height: calc(100vh - 140px);">
+          <div style="max-height: calc(100vh - 140px);">
             <div class="form-group form-content">
               <div class="form-row" *ngFor="let field of incidentInfo.validationResults;">
                   <div class="col-md-12 field-box">
@@ -42,6 +42,27 @@
               {{footerMessage}}
             </div>
           </div>
+        </div>
+        <div *ngIf="solutions && solutions.length>0" id="solutions-content-div" class="card-box" style="margin-bottom: 100px;">
+          <p>We ran some analysis on this app. Here is a summary of issues detected. Please explore 'More info' links to dig into details of <b>potential issues with your app</b>.</p>
+          <table style="width: 100%">
+            <tbody>
+              <tr>
+                <th style="width:20%">Issue</th>
+                <th style="width:60%">Description</th>
+                <th style="width:20%">Link</th>
+              </tr>
+              <tr *ngFor="let solution of solutions">
+                <td style="width:20%">
+                  <div *ngIf="solution.Status==0" style="color:red;font-weight:bold;border-radius:10px;text-align:center;width:20px;height:20px;padding-top:3px;display:inline;margin-right:10px;background-color:white;">!</div>
+                  <div *ngIf="solution.Status==1" style="color:rgb(240,171,44);font-weight:bold;border-radius:10px;text-align:center;width:20px;height:20px;padding-top:3px;display:inline;margin-right:10px;background-color:white;"><span style="top:-4px;position:relative;">&#9888;</span></div>
+                  <div style="display:inline-block;font-weight:700;">{{solution.Title}}</div>
+                </td>
+                <td style="width:60%"><div [innerHTML]="solution.Description"></div></td>
+                <td style="width:20%"><a href="{{solution.Uri}}" target="_blank">More Info</a></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
