--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
@@ -1,4 +1,4 @@
-<div class="network-checking-tool" #networkCheckingTool [ngStyle]="isSupportCenter ? {width: '100vw', height:'100vh'}:{width: 'calc(100vw - 298px)', height:'calc(100vh - 35px)'}">
+<div class="network-checking-tool" #networkCheckingTool [ngStyle]="{width: width, height: height}">
     <div class="container">
         <h2 >{{ title }}</h2>
         <p>{{ description }}</p>
