--- a/AngularApp/projects/diagnostic-data/src/lib/components/data-table-v4/data-table-v4.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/data-table-v4/data-table-v4.component.html
@@ -1,12 +1,12 @@
 <data-container [title]="renderingProperties.title">
   <div style="display: flex;align-items: baseline;">
     <div *ngIf="allowColumnSearch" class="text-field">
-        <fab-search-box #fabSearchBox [value]="searchValue" (onChange)="updateSearchValue($event)" (onFocus)="focusSearchBox()" [placeholder]="searchAriaLabel"></fab-search-box>
+        <fab-search-box #fabSearchBox [value]="searchValue" (onChange)="updateSearchValue($event)" (onFocus)="focusSearchBox()" [placeholder]="searchPlaceholder"></fab-search-box>
     </div>
     <!-- Filters -->
     <div *ngIf="tableFilters.length > 0" style="display: flex;">
       <div *ngFor="let filter of tableFilters;let i = index" style="margin-left: 16px;">
-        <fab-data-table-filter [tableFilter]=filter [options]="getOptionsWithColName(filter.columnName)" (onFilterUpdate)="updateFilter(filter.columnName,$event)" [index]="i" [tableId]="tableId"></fab-data-table-filter>
+        <fab-data-table-filter [tableFilter]="filter" [options]="getOptionsWithColName(filter.name)" (onFilterUpdate)="updateFilter(filter.name,$event)" [index]="i" [tableId]="tableId"></fab-data-table-filter>
       </div>
     </div>
   </div>
