Hide confirmation message for solution action of blade / tab open as those are UI actions and a confirmation message is irrelevant.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -16,11 +16,11 @@
       </div>
 
       <span class="ml-3">
-        {{actionStatus}}
+        <span *ngIf="showCompletionConfirmation()">{{actionStatus}}</span>
         <span *ngIf="actionStatus === 'Running...'">
           <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
         </span>
-        <span *ngIf="actionStatus === confirmationMessage">
+        <span *ngIf="actionStatus === confirmationMessage && showCompletionConfirmation()">
           <i class="fa fa-check-circle" aria-hidden="true"></i>
         </span>
       </span>
