Insights formatting on ICM page

--- a/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.html
+++ b/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.html
@@ -10,7 +10,7 @@
         <div *ngIf="displayLoader" class="loader-block">
           <i class="fa fa-spinner fa-spin loader-icon"></i>
         </div>
-        <div class="card-box" *ngIf="!pageLoading">
+        <div class="card-box" style="width:64%" *ngIf="!pageLoading">
           <div class="box-header with-border">
             <h3 class="box-title">Incident <a href="{{'https://portal.microsofticm.com/imp/v3/incidents/details/' + incidentInfo.incidentId + '/home'}}" target="_blank">{{incidentInfo.incidentId}}</a> &nbsp; {{incidentInfo.title}}</h3>
           </div>
@@ -34,7 +34,7 @@
               <fab-primary-button contentStyle="margin-top: 20px;"
                   type="Submit" text='Check Validation' (click)="onSubmit()" [disabled]="validationButtonDisabled">
               </fab-primary-button>
-              <fab-primary-button contentStyle="margin-top: 20px; margin-left: 10px;"
+              <fab-primary-button id="update-incident-button" contentStyle="margin-top: 20px; margin-left: 10px;"
                   type="Submit" text='Update Incident' (click)="onUpdateClick()" [disabled]="updateButtonDisabled">
               </fab-primary-button>
             </div>
@@ -43,8 +43,8 @@
             </div>
           </div>
         </div>
-        <div *ngIf="solutions && solutions.length>0" id="solutions-content-div" class="card-box" style="margin-bottom: 100px;">
-          <p>We ran some analysis on this app. Here is a summary of issues detected. Please explore 'More info' links to dig into details of <b>potential issues with your app</b>.</p>
+        <div *ngIf="solutions && solutions.length>0" id="solutions-content-div" class="solutions-card-box" style="margin-bottom: 100px; width:64%;">
+          <p>We ran some analysis on this app. Here is a summary of issues detected. Please explore 'More info' links to dig into details of <b>potential issues with the resource</b>.</p>
           <table style="width: 100%">
             <tbody>
               <tr>
