--- a/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.scss
@@ -73,6 +73,16 @@
     background-color: white;
 }
 
+.solutions-card-box{  
+    padding: 20px;  
+    width: 50%;
+    //max-height: calc(100vh - 80px);
+    margin: 0 auto;
+    border: 2px solid #d1d1da;
+    box-shadow: 10px 5px 14px #e4e4e4;
+    background-color: white;
+}
+
 *::-webkit-scrollbar {
     width: 8px;
   }
@@ -116,4 +126,12 @@
     margin-top: 10px;
     margin-left: 10px;
     display: inline-block;
+}
+
+table, th, td {
+    border: 1px solid black;
+    padding: 10px;
+    border-collapse: collapse;
+    table-layout: fixed;
+    overflow: hidden;
 }
