--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
@@ -1,4 +1,4 @@
-<div class="outer-container">
+<div class="outer-container" [ngClass]="{'withoutPadding': disablePadding}">
   <div class="control-container">
 
     <!-- <div class="control-group">
