--- a/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/incidentassist/components/incidentvalidation/incidentvalidation.component.scss
@@ -32,7 +32,7 @@
 
 .go-form {
     padding: 1em;
-    text-align: right;
+    text-align: left;
     height: 50px;
     padding-top: 0px;
     margin-top: -20px;
@@ -63,6 +63,10 @@
     font-size: 10em;top: 36vh;position: relative;color: #0a0a0a;
 }
 
+.loader-text{
+    font-size: 2em;position: relative;color: black;
+}
+
 .card-box{  
     padding: 20px;  
     width: 50%;
@@ -75,11 +79,7 @@
 
 .solutions-card-box{  
     padding: 20px;  
-    width: 50%;
     //max-height: calc(100vh - 80px);
-    margin: 0 auto;
-    border: 2px solid #d1d1da;
-    box-shadow: 10px 5px 14px #e4e4e4;
     background-color: white;
 }
 
